force-app/main/default/objects/InvoiceCustom__c/InvoiceCustom__c.object-meta.xml
<CustomObject>
    <label>InvoiceCustom</label>
    <nameField>
        <label>InvoiceCustom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InvoiceCustoms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>