force-app/main/default/objects/InvoiceCustom__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>NS Invoice to SF Invoice History</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>