force-app/main/default/objects/InvoiceCustom__c/fields/Initial_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Bill_Date__c</fullName>
    <description>NS Invoice to SF Invoice History</description>
    <label>Initial Bill Date</label>
    <type>Date</type>
</CustomField>