force-app/main/default/objects/InvoiceCustom__c/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <description>NS Invoice to SF Invoice History</description>
    <externalId>true</externalId>
    <label>NetSuite ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>