force-app/main/default/objects/InvoiceCustom__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NS Invoice to SF Invoice History</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>InvoiceCustoms</relationshipName>
    <type>Lookup</type>
</CustomField>