force-app/main/default/objects/InvoiceCustom__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>NS Invoice to SF Invoice History</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>